added phone numbers

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <main class="main">
     <!--==================== HOME ====================-->
     <section class="home section" id="home">
-      <img src="assets/img/tf-ai-brush-removebg-kl87p92k4.png" alt="home image" class="home__bg" />
+      <img src="assets/img/wc.jpg" alt="home image" class="home__bg" />
       <div class="home__shadow"></div>
 
       <div class="home__container container grid">
@@ -107,14 +107,11 @@
       <div class="about__container container grid">
         <div class="about__data">
           <h2 class="section__title">
-            Learn More <br />
-            About Travel
+          West Camp <br />
+            Haqida
           </h2>
           <p class="about__description">
-            All the trips around the world are a great pleasure and happiness
-            for anyone, enjoy the sights when you travel the world. Travel
-            safely and without worries, get your trip and explore the
-            paradises of the world.
+         West Camp oromgohi  h
           </p>
           <a href="https://www.instagram.com/westcamp.uz/" class="button">
             Oromgoh haqida <i class="ri-arrow-right-line"></i>
@@ -132,7 +129,7 @@
     <section class="popular section" id="popular">
       <h2 class="section__title">
         West Camp <br />
-        oromgohining guruhlari
+        oromgohning guruhlari
       </h2>
 
       <div class="popular__container container grid">
@@ -367,10 +364,10 @@
           </p>
         </div>
         <h1>
-          <a href="tel:+998(99)006-82-82">+998(99)006-82-82</a>
+          +998(99)006-82-82
         </h1>
         <h1>
-          <a href="tel:+998(90)964-82-82">+998(90)964-82-82</a>
+          +998(90)964-82-82
         </h1>
 
         <div class="footer__group">
@@ -381,8 +378,8 @@
             <a href="https://www.instagram.com/westcamp.uz/" target="_blank" class="footer__social-link">
               <i class="ri-instagram-line"></i>
             </a>
-            <a href="https://twitter.com/" target="_blank" class="footer__social-link">
-              <i class="ri-twitter-line"></i>
+            <a href="https://web.telegram.org/a/#-1001357759268" target="_blank" class="footer__social-link">
+              <i class="ri-telegram-line"></i>
             </a>
             <a href="https://www.youtube.com/watch?v=AwQs4cFoA2s" target="_blank" class="footer__social-link">
               <i class="ri-youtube-line"></i>
